Footer e links zpp

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<head>
+    <html lang="pt-br">
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>BTW -inovação e Tecnologia</title>
+    <title>BTW -Inovação e Tecnologia</title>
     <meta
       name="description"
       content="Knight is a beautiful Bootstrap 4 template for product landing pages."
@@ -38,7 +38,9 @@
     <section class="smart-scroll">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-md navbar-dark">
-          <a class="navbar-brand heading-black" href="index.html"> BTW </a>
+          <a class="navbar-brand heading-black" href="index.html">
+            <img src="./img/LogoBTW.png" alt="logo-BTW" height="150px" width="150px">
+          </a>
           <button
             class="navbar-toggler navbar-toggler-right border-0"
             type="button"
@@ -76,18 +78,20 @@
         <div class="row vh-md-100">
           <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center">
             <h1 class="heading-black text-capitalize">
-              Pensou, Imaginou apenas Realizamos
+              Pensou, Imaginou, Agora Apenas Realizamos
             </h1>
             <p class="lead py-3">
-              BTW e uma comapanhia especializada em desenvolvimentos, inovação e
-              Transformação Digital
+              BTW e uma companhia especializada em desenvolvimentos, inovação e
+              Transformação Digital!!!!
             </p>
-            <button
-              class="btn btn-primary d-inline-flex flex-row align-items-center"
-            >
+            <p>Temos tudo que sua empresa precisa!!!!</p>
+            <a href="https://wa.me/5582988425047" target="_blank" rel="noopener" title="link-whastapp">
+              <button
+              class="btn btn-primary d-inline-flex flex-row align-items-center">  
               Entre em Contato
               <em class="ml-2" data-feather="arrow-right"></em>
-            </button>
+              </button>
+            </a>
           </div>
         </div>
       </div>
@@ -447,53 +451,74 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-5 mr-auto">
-            <h5>About Knight</h5>
+            <h5>About BTW</h5>
             <p class="text-muted">
-              Magnis modipsae que voloratati andigen daepeditem quiate conecus
-              aut labore. Laceaque quiae sitiorem rest non restibusaes maio es
-              dem tumquam explabo.
+              Somos uma empresa que atua na area de tecnologia com o intuito de propocionar para você 
+              e o seu negocio sempre o melhor sobre tecnologia, trabalhamos com as melhores plataformas e 
+              tecnologia do mercado, trazendo excelencia em tudo que fazemos, tudo isso para que você possa entregar 
+              sempre o melhor para o seu cliente. 
             </p>
             <ul class="list-inline social social-sm">
               <li class="list-inline-item">
-                <a href=""><i class="fa fa-facebook"></i></a>
+                <a href="" target="_blank" rel="noopener" title="link-facebook">
+                  <i class="fa fa-facebook"></i></a>
               </li>
               <li class="list-inline-item">
-                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href="" target="_blank" rel="noopener" title="link-twitter">
+                  <i class="fa fa-twitter"></i></a>
               </li>
               <li class="list-inline-item">
-                <a href=""><i class="fa fa-google-plus"></i></a>
+                <a href="" target="_blank" rel="noopener" title="link-google">
+                  <i class="fa fa-google-plus"></i></a>
               </li>
               <li class="list-inline-item">
-                <a href=""><i class="fa fa-dribbble"></i></a>
+                <a href="" target="_blank" rel="noopener" title="link-dribbble">
+                  <i class="fa fa-dribbble"></i></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="" target="_blank" rel="noopener" title="link-instagram">
+                  <i class="fa fa-instagram"></i></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://wa.me/5582988425047" target="_blank" rel="noopener" title="link-whastapp">
+                  <i class="fa fa-whatsapp"></i></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="" target="_blank" rel="noopener" title="link-linkedin">
+                  <i class="fa fa-linkedin"></i></a>
+              </li>
+              <li class="list-inline-item">
+                <a href=""target="_blank" rel="noopener" title="link-youtube">
+                  <i class="fa fa-youtube"></i></a>
               </li>
             </ul>
           </div>
           <div class="col-sm-2">
             <h5>Legal</h5>
             <ul class="list-unstyled">
-              <li><a href="#">Privacy</a></li>
-              <li><a href="#">Terms</a></li>
-              <li><a href="#">Refund policy</a></li>
+              <li><a href="#">Privacidade</a></li>
+              <li><a href="#">Termos</a></li>
+              <li><a href="#">Politica de reembolso</a></li>
             </ul>
           </div>
           <div class="col-sm-2">
-            <h5>Partner</h5>
+            <h5>Parceiro</h5>
             <ul class="list-unstyled">
-              <li><a href="#">Refer a friend</a></li>
-              <li><a href="#">Affiliates</a></li>
+              <li><a href="#">Indique um Amigo</a></li>
+              <li><a href="#">Afiliados</a></li>
             </ul>
           </div>
           <div class="col-sm-2">
-            <h5>Help</h5>
+            <h5>Ajuda</h5>
             <ul class="list-unstyled">
-              <li><a href="#">Support</a></li>
-              <li><a href="#">Log in</a></li>
+              <li><a href="#">Suporte</a></li>
+              <li><a href="#">Login</a></li>
             </ul>
           </div>
         </div>
         <div class="row mt-5">
           <div class="col-12 text-muted text-center small-xl">
-            &copy; 2019 Knight - All Rights Reserved
+            &copy; BTW Tecnologia - All Rights Reserved
           </div>
         </div>
       </div>
